        * Scripts/webkitpy/commands/queries_unittest.py: ditto
        * Scripts/webkitpy/commands/queues_unittest.py: ditto
        * Scripts/webkitpy/commands/upload_unittest.py: ditto
        * Scripts/webkitpy/mock_bugzillatool.py: log when user.open_url is called.

2010-01-27  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Rubberstamped by Simon Hausmann

        [Qt] Refactor the code in the QtLauncher dealing with HTTP proxy.

        * QtLauncher/main.cpp:
        (MainWindow::MainWindow):
        * QtLauncher/webpage.cpp:
        (WebPage::WebPage):
        (WebPage::applyProxy):
        * QtLauncher/webpage.h:

2010-01-26  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] Corrects debug build of DumpRenderTree on Windows.

        * DumpRenderTree/qt/DumpRenderTree.pro:

2010-01-26  Daniel Bates  <dbates@webkit.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=34070

        Moves the try/catch for OSError exceptions in Executive.run_command
        to Credentials.read_credentials() so that the unit test
        webkitpy.scm_unittest.SCMClassTests.test_error_handlers can
        assert that Executive.run_command throws an OSError exception.

        * Scripts/webkitpy/credentials.py:
        * Scripts/webkitpy/executive.py: Moved try/catch for OSError to
        method Credentials.read_credentials().
        * Scripts/webkitpy/executive_unittest.py: Removed tests that no longer
        apply: test_run_command_with_bad_command_check_return_code and
        test_run_command_with_bad_command_check_calls_error_handler. Added new
        test to assert that run_command throws OSError exceptions.

2010-01-26  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT WebHistory support
        https://bugs.webkit.org/show_bug.cgi?id=34167

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp: